@@ -35,10 +35,12 @@ test = TestSCons.TestSCons()
 if sys.platform == 'win32':
     lib_=''
     _dll = '.dll'
+    _export = '__declspec(dllexport) '
     linkflag = '/LIBPATH:' + test.workpath()
 else:
     lib_='lib'
     _dll='.so'
+    _export=''
     linkflag = '-L' + test.workpath()
 
 test.write('SConstruct', """
@@ -52,6 +54,8 @@ env.Library(target = 'bar', source = 'foo.c', shared=1)
 """ % (linkflag, linkflag))
 
 test.write('foo.c', r"""
+%svoid foo() { }
+
 int
 main(int argc, char *argv[])
 {
@@ -59,9 +63,11 @@ main(int argc, char *argv[])
 	printf("foo.c\n");
 	exit (0);
 }
-""")
+""" % _export)
 
 test.run(arguments = '.')
+
+test.up_to_date(arguments = '.')
 
 test.run(program = test.workpath('foo'), stdout = "foo.c\n")
 
