@@ -78,6 +78,10 @@ RELEASE 0.07 - Thu, 25 Apr 2002 06:24:50 -0500
   - Fix for relative CPPPATH directories in subsidiary SConscript files
     (broken in 0.06).
 
+  - Add a for_signature argument to command generators, so that
+    generators that need to can return distinct values for the
+    command signature and for executing the command.
+
   From Alex Jacques:
 
   - Create a better scons.bat file from a py2bat.py script on the Python
